syntax = "proto3";

package scalapb.e2e;

option (scalapb.options) = {
    lenses: false
    getters: false
};

import "scalapb/scalapb.proto";

message NoGettersOrLensesA {
  int32 a = 1;
}

message NoGettersOrLenses {
    NoGettersOrLensesA a = 1;
}
